force-app/main/default/objects/Avodaas_Logs__c/Avodaas_Logs__c.object-meta.xml
<CustomObject>
    <description>Logger class for Avodaas package</description>
    <label>Avodaas Logs</label>
    <nameField>
        <label>Log Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Avodaas Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>