force-app/main/default/objects/Avodaas_Logs__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>the filed the error came from</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>