force-app/main/default/objects/Avodaas_Logs__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <description>The associated record Id(s)</description>
    <label>Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>